--- a/playbooks/create_folder.yml
+++ b/playbooks/create_folder.yml
@@ -3,6 +3,9 @@
   hosts: all
   gather_facts: no
 
+  collections:
+    - henryorg.win_folder
+
   tasks:
     - name: Create folder
       ansible.windows.win_file:
